# MyCodeWork

./: CMakeLists.txt  README.md  решето эратосфена с факторизацией.cpp  решето эратосфена.cpp
Теория чисел/: простые числа.cpp  факторизация.cpp
